src/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>No of days a position has been open.</description>
        <formula>IF( ISBLANK( close_date__c ) ,  TODAY() -  Open_date__c ,  close_date__c -  Open_date__c )</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_requirenments__c</fullName>
        <label>Educational requirenments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneuos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>retail Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Java_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <picklist>
            <controllingField>Functional_Area__c</controllingField>
            <picklistValues>
                <fullName>FN-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco,CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Austin,TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolder,CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London,England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York,NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai,India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo,Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_pay__c</fullName>
        <label>Max pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_pay__c</fullName>
        <label>Min pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Open date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Position</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open-Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>close_date__c</fullName>
        <label>close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hire_by__c</fullName>
        <defaultValue>TODAY()  + 90</defaultValue>
        <label>hire by</label>
        <type>Date</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Position</fullName>
        <active>true</active>
        <description>Record type for all IT positions</description>
        <label>IT Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Position</fullName>
        <active>true</active>
        <description>Record type for all non-IT positions.</description>
        <label>Standard Position</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <description>Close date must be specified when status is set to closed-filled or closed -not approved.</description>
        <errorConditionFormula>ISBLANK( close_date__c )  &amp;&amp; ( ISPICKVAL( Status__c ,&quot;Closed-Filled&quot; ) ||  ISPICKVAL( Status__c , &quot;Closed-Not Approved&quot;))</errorConditionFormula>
        <errorDisplayField>close_date__c</errorDisplayField>
        <errorMessage>Close date must be specified when status is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MIn_Pay_Rule</fullName>
        <active>true</active>
        <description>Min pay should never exceed max pay.</description>
        <errorConditionFormula>Min_pay__c  &gt;  Max_pay__c</errorConditionFormula>
        <errorMessage>Min Pay cannot exceeds Max Pay</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>resp_mandatory</fullName>
        <active>true</active>
        <description>Responsibilities  field must contain value.</description>
        <errorConditionFormula>ISBLANK( Responsibilities__c )</errorConditionFormula>
        <errorMessage>Please enter responsibilities.</errorMessage>
    </validationRules>
</CustomObject>